[package]
name = "hello-actix"
version = "0.1.0"
authors = ["paladinlll"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-codec = "0.2.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
awc = "1.0.1"
env_logger = "0.6"
futures = "0.3.1"
bytes = "0.5.3"
legion = { git = "https://github.com/TomGillen/legion" }
num-traits = "0.2"
rand = "*"
tracing-subscriber = "0.2"

# actix = "0.10.0-alpha.1"
# actix-rt = "*"
# tokio = { version = "0.2", features = ["full"] }
# tokio-util = { version = "0.3", features = ["full"] }